reduce white space in courses table, fix up css for title

--- a/src/MainPage.css
+++ b/src/MainPage.css
@@ -12,7 +12,6 @@
   margin-left: 2vw;
   margin-right: 2vw;
   width: calc(93vw - 510px);
-  padding-top: 20px;
   padding-bottom: 20px;
 }
 
@@ -56,7 +55,6 @@
   }
 
   .program-list {
-    padding-top: 20px;
     padding-bottom: 20px;
     margin-left: 2vw;
     margin-right: 2vw;
